[ADDED] Social and trackico link in footer [ADDED] Video play button [FIXED] Roadmap alignment

--- a/src/client/components/Footer/Footer.scss
+++ b/src/client/components/Footer/Footer.scss
@@ -1,43 +1,51 @@
 @import 'ui';
 
 :local(.container) {
-  color: #fff;
-  .footer-copyright-info {
-    font-weight: $font-weight-bold;
-  }
-
-  .footer-link {
-    text-decoration: none;
-    color: inherit;
-  }
-
-  .list-inline {
-    margin-bottom: 0;
-  }
-  .list-inline-item {
-    position: relative;
-    margin-right: 2rem;
-    &:first-child::after {
-      display: none;
+    color: #fff;
+    .footer-copyright-info {
+        font-weight: $font-weight-bold;
     }
 
-    &:after {
-      position: absolute;
-      left: -1rem;
-      width: 1px;
-      top: 3px;
-      bottom: 3px;
-      background-color: #fff;
-      content: '';
-      z-index: 1;
+    .footer-link {
+        text-decoration: none;
+        color: inherit;
     }
-  }
-  @include media-breakpoint-down(sm, $grid-breakpoints) {
+
+    .list-inline {
+        margin-bottom: 0;
+    }
     .list-inline-item {
-      display: block;
-      padding-top: map-get($spacers, 1);
-      padding-bottom: map-get($spacers, 1);
-      margin-right: 0;
+        position: relative;
+        margin-right: 2rem;
+        &:first-child::after {
+            display: none;
+        }
+
+        &:after {
+            position: absolute;
+            left: -1rem;
+            width: 1px;
+            top: 3px;
+            bottom: 3px;
+            background-color: #fff;
+            content: '';
+            z-index: 1;
+        }
+        &.no-border {
+            &:after {
+                display: none;
+            }
+        }
     }
-  }
+    .trackico-logo {
+        width: 50px;
+    }
+    @include media-breakpoint-down(sm, $grid-breakpoints) {
+        .list-inline-item {
+            display: block;
+            padding-top: map-get($spacers, 1);
+            padding-bottom: map-get($spacers, 1);
+            margin-right: 0;
+        }
+    }
 }
